@@ -407,7 +407,6 @@ void	DBclose(void);
 
 #ifdef HAVE_ORACLE
 void	DBstatement_prepare(const char *sql);
-void	DBbind_parameter(int position, void *buffer, unsigned char type);
 int	DBstatement_execute();
 #endif
 #ifdef HAVE___VA_ARGS__
@@ -578,16 +577,6 @@ void	DBdelete_groups(zbx_vector_uint64_t *groupids);
 void	DBselect_uint64(const char *sql, zbx_vector_uint64_t *ids);
 
 /* bulk insert support */
-
-/* database field value */
-typedef union
-{
-	int		i32;
-	zbx_uint64_t	ui64;
-	double		dbl;
-	char		*str;
-}
-zbx_db_value_t;
 
 /* database bulk insert data */
 typedef struct
